objects/SFDC_Schema_Org__mdt.object
<CustomObject>
    <description>Salesforce orgs dedicated for seeding schema details into this org which will not exist. These orgs are used to retrieve future industries data models or metadata for packaged components</description>
    <fields>
        <fullName>API_Version__c</fullName>
        <inlineHelpText>Salesforce API version to use against seed org</inlineHelpText>
        <label>API Version</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Namespace__c</fullName>
        <inlineHelpText>SFDC industry product namespace this seed organization has installed</inlineHelpText>
        <label>Industry Namespace</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Instance_URL__c</fullName>
        <inlineHelpText>Base instance URL of seed organization to make Salesforce API requests to</inlineHelpText>
        <label>Instance URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <inlineHelpText>Username of user in seed org approved for API access via Connected App to retrieve org information</inlineHelpText>
        <label>Username</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SFDC Schema Org</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Industry_Namespace__c</columns>
        <columns>Instance_URL__c</columns>
        <columns>Is_Sandbox__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>SFDC Schema Orgs</pluralLabel>
</CustomObject>